@@ -10,7 +10,7 @@ Stubs out files for new generators
 Usage:
 $0 [options]
     Options:
-$(grep "[[:space:]].)\ #" $0 | tr -d "#" | sed -E 's/( \| \*)//' | sed -E 's/([a-z])\)/-\1/')
+$(grep "[[:space:]].)\ #" $0 | tr -d "#" | sed -E 's/( \| \*)//' | sed -E 's/([a-zA-Z])\)/-\1/')
 
 Examples:
   Create a server generator for ktor:
@@ -21,8 +21,7 @@ Examples:
     modules/openapi-generator/src/main/resources/kotlin-server/README.mustache
     modules/openapi-generator/src/main/resources/kotlin-server/model.mustache
     modules/openapi-generator/src/main/resources/kotlin-server/api.mustache
-    bin/windows/kotlin-server-petstore.bat
-    bin/kotlin-server-petstore.sh
+    bin/configs/kotlin-server-petstore-new.yaml
 
   Create a generic C# server generator:
   $0 -n csharp -s -t
@@ -31,8 +30,7 @@ Examples:
     modules/openapi-generator/src/main/resources/csharp-server/README.mustache
     modules/openapi-generator/src/main/resources/csharp-server/model.mustache
     modules/openapi-generator/src/main/resources/csharp-server/api.mustache
-    bin/windows/csharp-server-petstore.bat
-    bin/csharp-server-petstore.sh
+    bin/configs/csharp-server-petstore-new.yaml
     modules/openapi-generator/src/test/java/org/openapitools/codegen/csharp/CsharpServerCodegenTest.java
     modules/openapi-generator/src/test/java/org/openapitools/codegen/csharp/CsharpServerCodegenModelTest.java
     modules/openapi-generator/src/test/java/org/openapitools/codegen/csharp/CsharpServerCodegenOptionsTest.java
@@ -56,7 +54,7 @@ checkPreviousGenType() {
 }
 
 [ $# -eq 0 ] && usage
-while getopts ":hcsdtn:" arg; do
+while getopts ":hcsdtfHn:" arg; do
   case ${arg} in
     n) # Required. Specify generator name, should be kebab-cased.
       gen_name=${OPTARG}
@@ -73,7 +71,7 @@ while getopts ":hcsdtn:" arg; do
         checkPreviousGenType
         gen_type=documentation
         ;;
-    h) # Create a schema generator
+    H) # Create a schema generator
         checkPreviousGenType
         gen_type=schema
         ;;
@@ -91,6 +89,12 @@ while getopts ":hcsdtn:" arg; do
   esac
 done
 
+if [ -z "$gen_type" ]; then
+    echo "[error] You may set a generator type" >&2
+    usage >&2
+    exit 1
+fi
+
 [ -z "${gen_name}" ] && usage
 
 titleCase() {
@@ -103,7 +107,19 @@ titleCase() {
 }
 
 kebabCase() {
-  echo $1 | tr '-' ' ' | tr '_' ' ' | tr '[:upper:]' '[:lower:]' | tr ' ' '-'
+  echo $1 | tr '_' ' ' | tr ' ' '-' | tr '[:upper:]' '[:lower:]'
+}
+
+kebabCasePath() {
+  echo $1 | tr '_' ' ' | tr ' ' '-' | tr '-' '/' | tr '[:upper:]' '[:lower:]'
+}
+
+kebabCasePathWin() {
+  echo $1 | tr '_' ' ' | tr ' ' '-' | tr '-' '\\' | tr '[:upper:]' '[:lower:]'
+}
+
+kebabCasePkg() {
+  echo $1 | tr '_' ' ' | tr ' ' '-' | tr '-' '.' | tr '[:upper:]' '[:lower:]'
 }
 
 upperCase() {
@@ -112,6 +128,9 @@ upperCase() {
 
 declare lang_classname=$(titleCase "${gen_name}-${gen_type}-Codegen")
 declare gen_name_camel=$(kebabCase "${gen_name}")
+declare gen_name_camel_path=$(kebabCasePath "${gen_name}")
+declare gen_name_camel_pathwin=$(kebabCasePathWin "${gen_name}")
+declare gen_name_camel_pkg=$(kebabCasePkg "${gen_name}")
 declare codegen_type_enum=$(upperCase "${gen_type}")
 
 # Step 1: Add Language Generator
@@ -139,29 +158,29 @@ import org.slf4j.LoggerFactory;
 public class ${lang_classname} extends DefaultCodegen implements CodegenConfig {
     public static final String PROJECT_NAME = "projectName";
 
-    static Logger LOGGER = LoggerFactory.getLogger(${lang_classname}.class);
+    static final Logger LOGGER = LoggerFactory.getLogger(${lang_classname}.class);
 
     public CodegenType getTag() {
         return CodegenType.${codegen_type_enum};
     }
 
     public String getName() {
-        return "${gen_name}";
+        return "${gen_name_camel}";
     }
 
     public String getHelp() {
-        return "Generates a ${gen_name} ${gen_type}.";
+        return "Generates a ${gen_name_camel} ${gen_type}.";
     }
 
     public ${lang_classname}() {
         super();
 
-        outputFolder = "generated-code" + File.separator + "${gen_name}";
+        outputFolder = "generated-code" + File.separator + "${gen_name_camel}";
         modelTemplateFiles.put("model.mustache", ".zz");
         apiTemplateFiles.put("api.mustache", ".zz");
-        embeddedTemplateDir = templateDir = "${gen_name}-${gen_type}";
-        apiPackage = File.separator + "Apis";
-        modelPackage = File.separator + "Models";
+        embeddedTemplateDir = templateDir = "${gen_name_camel}";
+        apiPackage = "Apis";
+        modelPackage = "Models";
         supportingFiles.add(new SupportingFile("README.mustache", "", "README.md"));
         // TODO: Fill this out.
     }
@@ -172,76 +191,32 @@ EOF
 echo -e "\norg.openapitools.codegen.languages.${lang_classname}" >> "${root}/modules/openapi-generator/src/main/resources/META-INF/services/org.openapitools.codegen.CodegenConfig"
 
 # Step 3: Create resource files
-mkdir -p "${root}/modules/openapi-generator/src/main/resources/${gen_name}-${gen_type}"
-echo "Creating modules/openapi-generator/src/main/resources/${gen_name}-${gen_type}/README.mustache" && \
-    touch "${root}/modules/openapi-generator/src/main/resources/${gen_name}-${gen_type}/README.mustache"
-echo "Creating modules/openapi-generator/src/main/resources/${gen_name}-${gen_type}/model.mustache" && \
-    touch "${root}/modules/openapi-generator/src/main/resources/${gen_name}-${gen_type}/model.mustache"
-echo "Creating modules/openapi-generator/src/main/resources/${gen_name}-${gen_type}/api.mustache" && \
-    touch "${root}/modules/openapi-generator/src/main/resources/${gen_name}-${gen_type}/api.mustache"
+mkdir -p "${root}/modules/openapi-generator/src/main/resources/${gen_name_camel}"
+echo "Creating modules/openapi-generator/src/main/resources/${gen_name_camel}/README.mustache" && \
+    touch "${root}/modules/openapi-generator/src/main/resources/${gen_name_camel}/README.mustache"
+echo "Creating modules/openapi-generator/src/main/resources/${gen_name_camel}/model.mustache" && \
+    touch "${root}/modules/openapi-generator/src/main/resources/${gen_name_camel}/model.mustache"
+echo "Creating modules/openapi-generator/src/main/resources/${gen_name_camel}/api.mustache" && \
+    touch "${root}/modules/openapi-generator/src/main/resources/${gen_name_camel}/api.mustache"
 
-# Step 4: Create bash/batch scripts
-
-## Windows batch file
-echo "Creating bin/windows/${gen_name}-${gen_type}-petstore.bat"
-cat > "${root}/bin/windows/${gen_name}-${gen_type}-petstore.bat"<<EOF
-set executable=.\modules\openapi-generator-cli\target\openapi-generator-cli.jar
-
-If Not Exist %executable% (
-  mvn clean package
-)
-
-REM set JAVA_OPTS=%JAVA_OPTS% -Xmx1024M -DloggerPath=conf/log4j.properties
-set ags=generate  --artifact-id "${gen_name}-petstore-${gen_type}" -i modules\openapi-generator\src\test\resources\2_0\petstore.yaml -g ${gen_name} -o samples\\${gen_type}\petstore\\${gen_name}
-
-java %JAVA_OPTS% -jar %executable% %ags%
+# Step 4: Create generation config scripts
+echo "Creating bin/configs/${gen_name_camel}-petstore-new.yaml"
+cat > "${root}/bin/configs/${gen_name_camel}-petstore-new.yaml"<<EOF
+generatorName: ${gen_name_camel}
+outputDir: samples/${gen_type}/petstore/${gen_name_camel_path}
+inputSpec: modules/openapi-generator/src/test/resources/3_0/petstore.yaml
+templateDir: modules/openapi-generator/src/main/resources/${gen_name_camel}
+additionalProperties:
+  hideGenerationTimestamp: "true"
 EOF
-
-## Bash file
-echo "Creating bin/${gen_name}-${gen_type}-petstore.sh"
-cat > "${root}/bin/${gen_name}-${gen_type}-petstore.sh"<<EOF
-#!/bin/sh
-
-SCRIPT="\$0"
-
-while [ -h "\$SCRIPT" ] ; do
-  ls=\$(ls -ld "\$SCRIPT")
-  link=\$(expr "\$ls" : '.*-> \(.*\)$')
-  if expr "\$link" : '/.*' > /dev/null; then
-    SCRIPT="\$link"
-  else
-    SCRIPT=\$(dirname "\$SCRIPT")/"\$link"
-  fi
-done
-
-if [ ! -d "\${APP_DIR}" ]; then
-  APP_DIR=\$(dirname "\$SCRIPT")/..
-  APP_DIR=\$(cd "\${APP_DIR}"; pwd)
-fi
-
-executable="./modules/openapi-generator-cli/target/openapi-generator-cli.jar"
-
-if [ ! -f "\$executable" ]
-then
-  mvn clean package
-fi
-
-# if you've executed sbt assembly previously it will use that instead.
-export JAVA_OPTS="\${JAVA_OPTS} -XX:MaxPermSize=256M -Xmx1024M -DloggerPath=conf/log4j.properties"
-ags="\$@ generate -i modules/openapi-generator/src/test/resources/2_0/petstore.yaml -g ${gen_name} -o samples/${gen_type}/petstore/${gen_name}"
-
-java \${JAVA_OPTS} -jar \${executable} \${ags}
-EOF
-
-chmod u+x "${root}/bin/${gen_name}-${gen_type}-petstore.sh"
 
 # Step 5: (optional) Create OpenAPI Generator test files
 if [ "1" -eq "${tests}" ]; then
-    mkdir -p "${root}/modules/openapi-generator/src/test/java/org/openapitools/codegen/${gen_name_camel}"
+    mkdir -p "${root}/modules/openapi-generator/src/test/java/org/openapitools/codegen/${gen_name_camel_path}"
     # Codegen
-    echo "Creating modules/openapi-generator/src/test/java/org/openapitools/codegen/${gen_name_camel}/${lang_classname}Test.java"
-    cat > "${root}/modules/openapi-generator/src/test/java/org/openapitools/codegen/${gen_name_camel}/${lang_classname}Test.java"<<EOF
-package org.openapitools.codegen.${gen_name_camel};
+    echo "Creating modules/openapi-generator/src/test/java/org/openapitools/codegen/${gen_name_camel_path}/${lang_classname}Test.java"
+    cat > "${root}/modules/openapi-generator/src/test/java/org/openapitools/codegen/${gen_name_camel_path}/${lang_classname}Test.java"<<EOF
+package org.openapitools.codegen.${gen_name_camel_pkg};
 
 import org.openapitools.codegen.*;
 import org.openapitools.codegen.languages.${lang_classname};
@@ -263,9 +238,9 @@ public class ${lang_classname}Test {
 EOF
 
     # Model
-    echo "Creating modules/openapi-generator/src/test/java/org/openapitools/codegen/${gen_name_camel}/${lang_classname}ModelTest.java"
-    cat > "${root}/modules/openapi-generator/src/test/java/org/openapitools/codegen/${gen_name_camel}/${lang_classname}ModelTest.java"<<EOF
-package org.openapitools.codegen.${gen_name_camel};
+    echo "Creating modules/openapi-generator/src/test/java/org/openapitools/codegen/${gen_name_camel_path}/${lang_classname}ModelTest.java"
+    cat > "${root}/modules/openapi-generator/src/test/java/org/openapitools/codegen/${gen_name_camel_path}/${lang_classname}ModelTest.java"<<EOF
+package org.openapitools.codegen.${gen_name_camel_pkg};
 
 import org.openapitools.codegen.*;
 import org.openapitools.codegen.languages.${lang_classname};
@@ -297,22 +272,20 @@ public class ${lang_classname}ModelTest {
 EOF
 
     # Options
-    echo "Creating modules/openapi-generator/src/test/java/org/openapitools/codegen/${gen_name_camel}/${lang_classname}OptionsTest.java"
-    cat > "${root}/modules/openapi-generator/src/test/java/org/openapitools/codegen/${gen_name_camel}/${lang_classname}OptionsTest.java"<<EOF
-package org.openapitools.codegen.${gen_name_camel};
+    echo "Creating modules/openapi-generator/src/test/java/org/openapitools/codegen/${gen_name_camel_path}/${lang_classname}OptionsTest.java"
+    cat > "${root}/modules/openapi-generator/src/test/java/org/openapitools/codegen/${gen_name_camel_path}/${lang_classname}OptionsTest.java"<<EOF
+package org.openapitools.codegen.${gen_name_camel_pkg};
 
 import org.openapitools.codegen.AbstractOptionsTest;
 import org.openapitools.codegen.CodegenConfig;
 import org.openapitools.codegen.languages.${lang_classname};
 import org.openapitools.codegen.options.${lang_classname}OptionsProvider;
 
-import mockit.Expectations;
-import mockit.Tested;
+import static org.mockito.Mockito.mock;
+import static org.mockito.Mockito.verify;
 
 public class ${lang_classname}OptionsTest extends AbstractOptionsTest {
-
-    @Tested
-    private ${lang_classname} codegen;
+    private ${lang_classname} codegen = mock(${lang_classname}.class, mockSettings);
 
     public ${lang_classname}OptionsTest() {
         super(new ${lang_classname}OptionsProvider());
@@ -325,11 +298,9 @@ public class ${lang_classname}OptionsTest extends AbstractOptionsTest {
 
     @SuppressWarnings("unused")
     @Override
-    protected void setExpectations() {
-        // TODO: Complete options
-        new Expectations(codegen) {{
-
-        }};
+    protected void verifyOptions() {
+        // TODO: Complete options using Mockito
+        // verify(codegen).someMethod(arguments)
     }
 }
 
